utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/DuplicateIdentifierModule.ide
package invalid

typedef module DuplicateIdentifierModule {
    module identifier: CommonModule
    module identifier: CommonModule
}
